upgrading to java17